// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It can distribute space with null children 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  background-color: white;
  display: block;
  padding-top: 24px;
  padding-bottom: 24px;
  width: 100%;
}

.c3 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  display: block;
}

.c5 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  background-color: #e3e3e3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  overflow: hidden;
}

.c2:empty {
  display: none;
}

.c2:empty + div:before {
  display: none;
}

.c2:not(:empty) ~ div:not(:empty):before {
  content: "";
  display: block;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  position: relative;
  height: 0.1px;
  height: 1px;
  box-shadow: inset 0 0 0 1px #e3e3e3;
  margin-bottom: 47px;
  margin-top: 48px;
}

.c2:nth-child(n + 2):before {
  content: "";
  display: block;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  position: relative;
  height: 0.1px;
  height: 1px;
  box-shadow: inset 0 0 0 1px #e3e3e3;
  margin-bottom: 47px;
  margin-top: 48px;
}

.c1 {
  padding-left: 16px;
  padding-right: 16px;
}

.c1:not(:empty) ~ div:not(:empty):before,
.c1:nth-child(n + 2):before {
  margin-left: -16px;
  margin-right: -16px;
}

.c4 {
  width: 100%;
  min-width: 10px;
  height: 120px;
  border: 2px solid rgba(51,51,51,0.3);
}

@media screen and (min-width:992px) {
  .c0 {
    padding-top: 32px;
  }
}

@media screen and (min-width:992px) {
  .c0 {
    padding-bottom: 32px;
  }
}

@media (min-width:576px) {
  .c1 {
    padding-left: 32px;
    padding-right: 32px;
  }

  .c1:not(:empty) ~ div:not(:empty):before,
  .c1:nth-child(n + 2):before {
    margin-left: -32px;
    margin-right: -32px;
  }
}

<div>
  <div
    class="c0"
    data-id="divider-card"
    display="block"
    width="full"
  >
    <div
      class="c1 c2 c3"
      data-id="divider-card-child"
      display="block"
    />
    <div
      class="c1 c2 c3"
      data-id="divider-card-child"
      display="block"
    >
      <div
        class="c4 c5"
        data-id="placeholder"
        display="flex"
        height="120"
        overflow="hidden"
        shape="rectangle"
        width="100%"
      >
        <svg
          style="width: 100%; height: 100%; position: absolute;"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
            x1="0"
            x2="100%"
            y1="0"
            y2="100%"
          />
          <line
            style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
            x1="100%"
            x2="0"
            y1="0"
            y2="100%"
          />
        </svg>
      </div>
    </div>
    <div
      class="c1 c2 c3"
      data-id="divider-card-child"
      display="block"
    />
    <div
      class="c1 c2 c3"
      data-id="divider-card-child"
      display="block"
    >
      <div
        class="c4 c5"
        data-id="placeholder"
        display="flex"
        height="120"
        overflow="hidden"
        shape="rectangle"
        width="100%"
      >
        <svg
          style="width: 100%; height: 100%; position: absolute;"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
            x1="0"
            x2="100%"
            y1="0"
            y2="100%"
          />
          <line
            style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
            x1="100%"
            x2="0"
            y1="0"
            y2="100%"
          />
        </svg>
      </div>
    </div>
    <div
      class="c1 c2 c3"
      data-id="divider-card-child"
      display="block"
    />
    <div
      class="c1 c2 c3"
      data-id="divider-card-child"
      display="block"
    >
      <div
        class="c4 c5"
        data-id="placeholder"
        display="flex"
        height="120"
        overflow="hidden"
        shape="rectangle"
        width="100%"
      >
        <svg
          style="width: 100%; height: 100%; position: absolute;"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
            x1="0"
            x2="100%"
            y1="0"
            y2="100%"
          />
          <line
            style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
            x1="100%"
            x2="0"
            y1="0"
            y2="100%"
          />
        </svg>
      </div>
    </div>
    <div
      class="c1 c2 c3"
      data-id="divider-card-child"
      display="block"
    />
  </div>
</div>
`;

exports[`it renders a divider card 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  background-color: white;
  display: block;
  padding-top: 24px;
  padding-bottom: 24px;
  width: 100%;
}

.c3 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  display: block;
}

.c5 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  background-color: #e3e3e3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  overflow: hidden;
}

.c2:empty {
  display: none;
}

.c2:empty + div:before {
  display: none;
}

.c2:not(:empty) ~ div:not(:empty):before {
  content: "";
  display: block;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  position: relative;
  height: 0.1px;
  height: 1px;
  box-shadow: inset 0 0 0 1px #e3e3e3;
  margin-bottom: 15px;
  margin-top: 16px;
}

.c2:nth-child(n + 2):before {
  content: "";
  display: block;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  position: relative;
  height: 0.1px;
  height: 1px;
  box-shadow: inset 0 0 0 1px #e3e3e3;
  margin-bottom: 15px;
  margin-top: 16px;
}

.c1 {
  padding-left: 16px;
  padding-right: 16px;
}

.c1:not(:empty) ~ div:not(:empty):before,
.c1:nth-child(n + 2):before {
  margin-left: -16px;
  margin-right: -16px;
}

.c4 {
  width: 100%;
  min-width: 10px;
  height: 120px;
  border: 2px solid rgba(51,51,51,0.3);
}

@media screen and (min-width:992px) {
  .c0 {
    padding-top: 32px;
  }
}

@media screen and (min-width:992px) {
  .c0 {
    padding-bottom: 32px;
  }
}

@media screen and (min-width:576px) {
  .c2:not(:empty) ~ div:not(:empty):before {
    margin-bottom: 15px;
  }
}

@media screen and (min-width:768px) {
  .c2:not(:empty) ~ div:not(:empty):before {
    margin-bottom: 15px;
  }
}

@media screen and (min-width:992px) {
  .c2:not(:empty) ~ div:not(:empty):before {
    margin-bottom: 23px;
  }
}

@media screen and (min-width:1200px) {
  .c2:not(:empty) ~ div:not(:empty):before {
    margin-bottom: 23px;
  }
}

@media screen and (min-width:576px) {
  .c2:not(:empty) ~ div:not(:empty):before {
    margin-top: 16px;
  }
}

@media screen and (min-width:768px) {
  .c2:not(:empty) ~ div:not(:empty):before {
    margin-top: 16px;
  }
}

@media screen and (min-width:992px) {
  .c2:not(:empty) ~ div:not(:empty):before {
    margin-top: 24px;
  }
}

@media screen and (min-width:1200px) {
  .c2:not(:empty) ~ div:not(:empty):before {
    margin-top: 24px;
  }
}

@media screen and (min-width:576px) {
  .c2:nth-child(n + 2):before {
    margin-bottom: 15px;
  }
}

@media screen and (min-width:768px) {
  .c2:nth-child(n + 2):before {
    margin-bottom: 15px;
  }
}

@media screen and (min-width:992px) {
  .c2:nth-child(n + 2):before {
    margin-bottom: 23px;
  }
}

@media screen and (min-width:1200px) {
  .c2:nth-child(n + 2):before {
    margin-bottom: 23px;
  }
}

@media screen and (min-width:576px) {
  .c2:nth-child(n + 2):before {
    margin-top: 16px;
  }
}

@media screen and (min-width:768px) {
  .c2:nth-child(n + 2):before {
    margin-top: 16px;
  }
}

@media screen and (min-width:992px) {
  .c2:nth-child(n + 2):before {
    margin-top: 24px;
  }
}

@media screen and (min-width:1200px) {
  .c2:nth-child(n + 2):before {
    margin-top: 24px;
  }
}

@media (min-width:576px) {
  .c1 {
    padding-left: 32px;
    padding-right: 32px;
  }

  .c1:not(:empty) ~ div:not(:empty):before,
  .c1:nth-child(n + 2):before {
    margin-left: -32px;
    margin-right: -32px;
  }
}

<div>
  <div
    class="c0"
    data-id="divider-card"
    display="block"
    width="full"
  >
    <div
      class="c1 c2 c3"
      data-id="divider-card-child"
      display="block"
    >
      <div
        class="c4 c5"
        data-id="placeholder"
        display="flex"
        height="120"
        overflow="hidden"
        shape="rectangle"
        width="100%"
      >
        <svg
          style="width: 100%; height: 100%; position: absolute;"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
            x1="0"
            x2="100%"
            y1="0"
            y2="100%"
          />
          <line
            style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
            x1="100%"
            x2="0"
            y1="0"
            y2="100%"
          />
        </svg>
      </div>
    </div>
    <div
      class="c1 c2 c3"
      data-id="divider-card-child"
      display="block"
    >
      <div
        class="c4 c5"
        data-id="placeholder"
        display="flex"
        height="120"
        overflow="hidden"
        shape="rectangle"
        width="100%"
      >
        <svg
          style="width: 100%; height: 100%; position: absolute;"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
            x1="0"
            x2="100%"
            y1="0"
            y2="100%"
          />
          <line
            style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
            x1="100%"
            x2="0"
            y1="0"
            y2="100%"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`it renders a divider card with a selected background color 1`] = `
.c3 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  display: block;
}

.c5 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  background-color: #e3e3e3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  overflow: hidden;
}

.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  background-color: #f8f8f8;
  display: block;
  padding-top: 24px;
  padding-bottom: 24px;
  width: 100%;
}

.c2:empty {
  display: none;
}

.c2:empty + div:before {
  display: none;
}

.c2:not(:empty) ~ div:not(:empty):before {
  content: "";
  display: block;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  position: relative;
  height: 0.1px;
  height: 1px;
  box-shadow: inset 0 0 0 1px #e3e3e3;
  margin-bottom: 23px;
  margin-top: 24px;
}

.c2:nth-child(n + 2):before {
  content: "";
  display: block;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  position: relative;
  height: 0.1px;
  height: 1px;
  box-shadow: inset 0 0 0 1px #e3e3e3;
  margin-bottom: 23px;
  margin-top: 24px;
}

.c1 {
  padding-left: 16px;
  padding-right: 16px;
}

.c1:not(:empty) ~ div:not(:empty):before,
.c1:nth-child(n + 2):before {
  margin-left: -16px;
  margin-right: -16px;
}

.c4 {
  width: 100%;
  min-width: 10px;
  height: 120px;
  border: 2px solid rgba(51,51,51,0.3);
}

@media screen and (min-width:576px) {
  .c0 {
    padding-top: 48px;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    padding-top: 64px;
  }
}

@media screen and (min-width:576px) {
  .c0 {
    padding-bottom: 48px;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    padding-bottom: 64px;
  }
}

@media (min-width:576px) {
  .c1 {
    padding-left: 48px;
    padding-right: 48px;
  }

  .c1:not(:empty) ~ div:not(:empty):before,
  .c1:nth-child(n + 2):before {
    margin-left: -48px;
    margin-right: -48px;
  }
}

@media (min-width:768px) {
  .c1 {
    padding-left: 64px;
    padding-right: 64px;
  }

  .c1:not(:empty) ~ div:not(:empty):before,
  .c1:nth-child(n + 2):before {
    margin-left: -64px;
    margin-right: -64px;
  }
}

<div>
  <div
    class="c0"
    data-id="divider-card"
    display="block"
    width="full"
  >
    <div
      class="c1 c2 c3"
      data-id="divider-card-child"
      display="block"
    >
      <div
        class="c4 c5"
        data-id="placeholder"
        display="flex"
        height="120"
        overflow="hidden"
        shape="rectangle"
        width="100%"
      >
        <svg
          style="width: 100%; height: 100%; position: absolute;"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
            x1="0"
            x2="100%"
            y1="0"
            y2="100%"
          />
          <line
            style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
            x1="100%"
            x2="0"
            y1="0"
            y2="100%"
          />
        </svg>
      </div>
    </div>
    <div
      class="c1 c2 c3"
      data-id="divider-card-child"
      display="block"
    >
      <div
        class="c4 c5"
        data-id="placeholder"
        display="flex"
        height="120"
        overflow="hidden"
        shape="rectangle"
        width="100%"
      >
        <svg
          style="width: 100%; height: 100%; position: absolute;"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
            x1="0"
            x2="100%"
            y1="0"
            y2="100%"
          />
          <line
            style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
            x1="100%"
            x2="0"
            y1="0"
            y2="100%"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`it renders a divider card with large padding 1`] = `
.c3 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  display: block;
}

.c5 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  background-color: #e3e3e3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  overflow: hidden;
}

.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  background-color: white;
  display: block;
  padding-top: 24px;
  padding-bottom: 24px;
  width: 100%;
}

.c2:empty {
  display: none;
}

.c2:empty + div:before {
  display: none;
}

.c2:not(:empty) ~ div:not(:empty):before {
  content: "";
  display: block;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  position: relative;
  height: 0.1px;
  height: 1px;
  box-shadow: inset 0 0 0 1px #e3e3e3;
  margin-bottom: 23px;
  margin-top: 24px;
}

.c2:nth-child(n + 2):before {
  content: "";
  display: block;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  position: relative;
  height: 0.1px;
  height: 1px;
  box-shadow: inset 0 0 0 1px #e3e3e3;
  margin-bottom: 23px;
  margin-top: 24px;
}

.c1 {
  padding-left: 16px;
  padding-right: 16px;
}

.c1:not(:empty) ~ div:not(:empty):before,
.c1:nth-child(n + 2):before {
  margin-left: -16px;
  margin-right: -16px;
}

.c4 {
  width: 100%;
  min-width: 10px;
  height: 120px;
  border: 2px solid rgba(51,51,51,0.3);
}

@media screen and (min-width:576px) {
  .c0 {
    padding-top: 48px;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    padding-top: 64px;
  }
}

@media screen and (min-width:576px) {
  .c0 {
    padding-bottom: 48px;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    padding-bottom: 64px;
  }
}

@media (min-width:576px) {
  .c1 {
    padding-left: 48px;
    padding-right: 48px;
  }

  .c1:not(:empty) ~ div:not(:empty):before,
  .c1:nth-child(n + 2):before {
    margin-left: -48px;
    margin-right: -48px;
  }
}

@media (min-width:768px) {
  .c1 {
    padding-left: 64px;
    padding-right: 64px;
  }

  .c1:not(:empty) ~ div:not(:empty):before,
  .c1:nth-child(n + 2):before {
    margin-left: -64px;
    margin-right: -64px;
  }
}

<div>
  <div
    class="c0"
    data-id="divider-card"
    display="block"
    width="full"
  >
    <div
      class="c1 c2 c3"
      data-id="divider-card-child"
      display="block"
    >
      <div
        class="c4 c5"
        data-id="placeholder"
        display="flex"
        height="120"
        overflow="hidden"
        shape="rectangle"
        width="100%"
      >
        <svg
          style="width: 100%; height: 100%; position: absolute;"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
            x1="0"
            x2="100%"
            y1="0"
            y2="100%"
          />
          <line
            style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
            x1="100%"
            x2="0"
            y1="0"
            y2="100%"
          />
        </svg>
      </div>
    </div>
    <div
      class="c1 c2 c3"
      data-id="divider-card-child"
      display="block"
    >
      <div
        class="c4 c5"
        data-id="placeholder"
        display="flex"
        height="120"
        overflow="hidden"
        shape="rectangle"
        width="100%"
      >
        <svg
          style="width: 100%; height: 100%; position: absolute;"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
            x1="0"
            x2="100%"
            y1="0"
            y2="100%"
          />
          <line
            style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
            x1="100%"
            x2="0"
            y1="0"
            y2="100%"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`it renders a divider card with medium padding and medium spacing 1`] = `
.c3 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  display: block;
}

.c5 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  background-color: #e3e3e3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  overflow: hidden;
}

.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  background-color: white;
  display: block;
  padding-top: 24px;
  padding-bottom: 24px;
  width: 100%;
}

.c2:empty {
  display: none;
}

.c2:empty + div:before {
  display: none;
}

.c2:not(:empty) ~ div:not(:empty):before {
  content: "";
  display: block;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  position: relative;
  height: 0.1px;
  height: 1px;
  box-shadow: inset 0 0 0 1px #e3e3e3;
  margin-bottom: 15px;
  margin-top: 16px;
}

.c2:nth-child(n + 2):before {
  content: "";
  display: block;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  position: relative;
  height: 0.1px;
  height: 1px;
  box-shadow: inset 0 0 0 1px #e3e3e3;
  margin-bottom: 15px;
  margin-top: 16px;
}

.c1 {
  padding-left: 16px;
  padding-right: 16px;
}

.c1:not(:empty) ~ div:not(:empty):before,
.c1:nth-child(n + 2):before {
  margin-left: -16px;
  margin-right: -16px;
}

.c4 {
  width: 100%;
  min-width: 10px;
  height: 120px;
  border: 2px solid rgba(51,51,51,0.3);
}

@media screen and (min-width:576px) {
  .c0 {
    padding-top: 48px;
  }
}

@media screen and (min-width:576px) {
  .c0 {
    padding-bottom: 48px;
  }
}

@media (min-width:576px) {
  .c1 {
    padding-left: 48px;
    padding-right: 48px;
  }

  .c1:not(:empty) ~ div:not(:empty):before,
  .c1:nth-child(n + 2):before {
    margin-left: -48px;
    margin-right: -48px;
  }
}

<div>
  <div
    class="c0"
    data-id="divider-card"
    display="block"
    width="full"
  >
    <div
      class="c1 c2 c3"
      data-id="divider-card-child"
      display="block"
    >
      <div
        class="c4 c5"
        data-id="placeholder"
        display="flex"
        height="120"
        overflow="hidden"
        shape="rectangle"
        width="100%"
      >
        <svg
          style="width: 100%; height: 100%; position: absolute;"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
            x1="0"
            x2="100%"
            y1="0"
            y2="100%"
          />
          <line
            style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
            x1="100%"
            x2="0"
            y1="0"
            y2="100%"
          />
        </svg>
      </div>
    </div>
    <div
      class="c1 c2 c3"
      data-id="divider-card-child"
      display="block"
    >
      <div
        class="c4 c5"
        data-id="placeholder"
        display="flex"
        height="120"
        overflow="hidden"
        shape="rectangle"
        width="100%"
      >
        <svg
          style="width: 100%; height: 100%; position: absolute;"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
            x1="0"
            x2="100%"
            y1="0"
            y2="100%"
          />
          <line
            style="stroke-width: 2px; stroke: rgba(51,51,51,.1);"
            x1="100%"
            x2="0"
            y1="0"
            y2="100%"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
